--- a/nav.html
+++ b/nav.html
@@ -83,9 +83,8 @@
 
 			if (id == 'home')
 				window.open("https://home.com", '_blank').focus();
-			
 			else if (id == 'calendar')
-				window.open("https://calendar.com", '_blank').focus();
+				window.open("https://www.notion.so/calendar-c179a13e6cfe4da7b73233df7ef66e7e", '_blank').focus();
 			else if (id == 'courses')
 				window.open("https://courses.com", '_blank').focus();
 			else if (id == 'assignments tracker')
