--- a/nav.html
+++ b/nav.html
@@ -84,7 +84,7 @@
 			if (id == 'home')
 				window.open("https://home.com", '_blank').focus();
 			else if (id == 'calendar')
-				window.open("https://www.notion.so/calendar-c179a13e6cfe4da7b73233df7ef66e7e", '_parent').focus();
+				window.open("https://www.notion.so/calendar-c179a13e6cfe4da7b73233df7ef66e7e", '_blank').focus();
 			else if (id == 'courses')
 				window.open("https://courses.com", '_blank').focus();
 			else if (id == 'assignments tracker')
